<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="pref_general_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:defaultValue="@string/pref_email_default"
        android:inputType="textEmailAddress"
        android:key="pref_general_email"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_general_email" />

    <ListPreference
        android:defaultValue="@string/pref_gen_social_default"
        android:entries="@array/pref_gen_social_entries"
        android:entryValues="@array/pref_gen_social_values"
        android:key="pref_gen_social"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_gen_social" />

</PreferenceScreen>
